[metadata]
name = python-dracclient
summary = Library for managing machines with Dell iDRAC cards
description-file = README.rst
maintainer = Imre Farkas
maintainer_email = ifarkas@redhat.com
home-page = https://launchpad.net/python-dracclient
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Environment :: OpenStack
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    dracclient
