[metadata]
name = python-dracclient
summary = Library for managing machines with Dell iDRAC cards
description-file = README.rst
maintainer = DracClient Team
maintainer_email = openstack-dev@lists.openstack.org
home-page = https://launchpad.net/python-dracclient
license = Apache-2
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    dracclient

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
